2009-12-23  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Not reviewed, adding myself to the reviewers list.

        * Scripts/modules/committers.py:

2009-12-23  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Create a prepare-diff command that creates a bug and a ChangeLog
        https://bugs.webkit.org/show_bug.cgi?id=32895

        The workflow Maciej and I discussed is as follows:

        1) Write code.
        2) bugzilla-tool prepare-diff
        3) Edit ChangeLogs
        4) bugzilla-tool post-diff

        We might want to experimenting with combining 2-4 into a single
        command, but that might be stressful to edit the ChangeLogs modally.

        Removed submit-patch since it has the modal ChangeLog editing but none
        oof the bug creating fun.

        * Scripts/modules/bugzilla.py:
        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/upload.py:
        * Scripts/modules/commands/upload_unittest.py:

2009-12-23  Gabor Loki  <loki@webkit.org>

        Unreviewed; added myself to the committers list.

        * Scripts/modules/committers.py:

2009-12-22  Adam Barth  <abarth@webkit.org>

        Reviewed by Maciej Stachowiak.

        [bzt] Don't call create-patch twice during post-diff
        https://bugs.webkit.org/show_bug.cgi?id=32893

        If we call create-patch to get the bug number, cache the diff in the
        state so we don't need to call it again.

        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/upload.py:

2009-12-22  Daniel Bates  <dbates@rim.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=32680

        Fixes an issue in builtDylibPathForName so that it returns the correct
        path to the built QtWebKit library on the Qt Windows port. Currently,
        it returns the path to the file named QtWebKit.dll but this file does
        not exist on the Qt Windows build. Instead, the file is named